<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/stamp"
            android:checked="true"
            android:icon="@drawable/ic_group_work_black_24dp"
            android:title="@string/all_stamp"/>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/red"
            android:icon="@drawable/ic_lens_red_24dp"
            android:title="@string/red_stamp"/>
        <item
            android:id="@+id/blue"
            android:icon="@drawable/ic_lens_blue_24dp"
            android:title="@string/blue_stamp"/>
        <item
            android:id="@+id/yellow"
            android:icon="@drawable/ic_lens_yellow_24dp"
            android:title="@string/yellow_stamp"/>
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/archive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archive"/>
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/trash"/>
    </group>
</menu>
